@@ -43,6 +43,9 @@
      [clientloop.c serverloop.c sshd.c]
      set flags in the signal handlers, do real work in the main loop, 
      ok provos@
+   - markus@cvs.openbsd.org 2001/06/04 23:16:16
+     [session.c]
+     merge ssh1/2 x11-fwd setup, create listener after tmp-dir
 
 20010606
  - OpenBSD CVS Sync
@@ -5554,4 +5557,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1259 2001/06/09 01:27:31 mouring Exp $
+$Id: ChangeLog,v 1.1260 2001/06/09 01:29:12 mouring Exp $
